--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
-  <title>Vite + React</title>
+  <title>Pinguland-Orrey</title>
 </head>
 
 <body>
